# GPS-Data-Logger-Project

./: .gitignore  CMakeLists.txt  CPP_SETUP.md  DASHBOARD_README.md  INSTALL_PI.md  QUICKSTART.md  README.md  TESTING.md  dashboard.py  gps_logger.py  gps_logger_boost.cpp  gps_stream_simulator.py  install_pi.sh  requirements.txt
data/: output.nmea
logs/: gps_log_20251116_171357.csv  gps_log_20251118_135858.csv  gps_log_20251118_135904.csv  gps_log_20251118_135933.csv  gps_log_20251118_140654.csv  gps_log_20251118_220923.csv  gps_log_20251118_221056.csv  gps_log_20251118_221230.csv  gps_log_20251118_221601.csv  gps_log_20251118_222430.csv  gps_log_20251118_223949.csv
